# mathlang

./: .gitignore  Cargo.toml  test_neg.mth  test_unary.rs  todos.md
crates/code_generator/: Cargo.toml
crates/code_generator/src/: codegen.rs  lib.rs  tests.rs
crates/graph_canvas/: Cargo.toml
crates/graph_canvas/src/: controls.rs  fragment_shader_primitive.rs  graph_shader.wgsl  graph_shader_pipeline.rs  lib.rs
crates/mth_ast/: Cargo.toml
crates/mth_ast/src/: expr.rs  lib.rs  literal.rs  mapping.rs  module.rs  s_expr.rs  top_level.rs
crates/mth_common/: Cargo.toml
crates/mth_common/src/: lib.rs  ops.rs  plot_desc.rs
crates/mth_parser/: Cargo.toml
crates/mth_parser/src/: grammar.g4  lib.rs
crates/mth_parser/src/parse_functions/: expr.rs  exprold.rs  fn_call.rs  fn_decl.rs  literal.rs  mapping.rs  mod.rs  (+5 more)
crates/mth_parser/tests/: test.rs
crates/parser_lib/: Cargo.toml
crates/parser_lib/src/: combinators.rs  cursor.rs  helpers.rs  lib.rs  primitives.rs  tests.rs  types.rs
examples/: circle.mth  fn.mth  simple_fn.mth  simple_fn.mtp
src/: ast.rs  main.rs  ops.rs  parser.rs
src/graph/: fragment_shader_primitive.rs  graph_shader.wgsl  graph_shader_pipeline.rs  mod.rs  ops.rs
src/parser/: ast.rs  cursor.rs  mod.rs  types.rs
src/parser/ast/: expr.rs  grammar.g4  literal.rs  mapping.rs  mod.rs  s_expr.rs  top_level.rs  type_decl.rs
src/parser/parse_functions/: expr.rs  literal.rs  mapping.rs  mod.rs  module.rs  s_expr.rs  tests.rs  top_level.rs  type_decl.rs
src/parser/parser_lib/: combinators.rs  helpers.rs  mod.rs  primitives.rs  tests.rs
(+2 files in other folders)
