[workspace]
resolver = "2"

default-members = [
    "bin/mth_editor",
]
members = [
    "crates/graph_canvas",
    "crates/mth_ast",
    "crates/mth_parser",
    "crates/mth_common",
    "crates/code_generator",
    "crates/parser_lib",
    "bin/mth_editor", "crates/code_generator",
]

# Inherited by sub-packages
[workspace.package]
version = "0.1.0"
edition = "2024"


