[package]
name = "graph_canvas"
version.workspace = true
edition.workspace = true

[dependencies]
mth_common = { path = "../mth_common" }

bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.31.0", features = ["bytemuck"] }
iced = { version = "0.14.0", features = ["canvas", "highlighter", "advanced"] }
